# rust-web-scaffolding

./: Cargo.toml  README.md
res/config/: app.toml
res/template/: add.html  index.html  soul.html
src/: main.rs
src/base/: app.rs  cache.rs  db.rs  mod.rs  rand.rs  redis.rs  view.rs
src/controller/: index.rs  mod.rs
src/controller/example/: db.rs  mod.rs  redis.rs  state.rs  view.rs
