[package]
name = "web-scaffolding-actix"
version = "0.1.0"
authors = ["Pader <ypnow@163.com>"]
edition = "2018"

[dependencies]
actix-web = "2"
actix-rt = "1.0"
actix-files = "0.2.2"
tera = "1"
chrono = "0.4.11"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "chrono", "mysql" ] }
#lazy_static = "1.4.0"
deadpool-redis = "0.6.0"
redis = "0.16.0"